fix(timetable): spacing with two next games

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -168,8 +168,8 @@
   }
 
   .timeslots-row {
-    margin-top: 24px;
-    margin-bottom: 100px;
+    margin-top: 16px;
+    margin-bottom: 64px;
   }
 
   .sponsors-logo {
